--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,8 @@ on:
   workflow_dispatch:
   release:
     types: [published]
-
+env:
+  VERSION: "1.3.2"
 
 jobs:
   build:
@@ -66,7 +67,8 @@ jobs:
           if [ "${{ matrix.job.goos }}" = "windows" ]; then
             sudo apt-get install gcc-mingw-w64-x86-64 zip -y
             GOOS=${{ matrix.job.goos }} GOARCH=${{ matrix.job.platform }} CC=x86_64-w64-mingw32-gcc CGO_LDFLAGS="-static" CGO_ENABLED=1 go build -ldflags "-s -w" -o ./release/rustdesk-api-server.exe ./cmd/apimain.go
-            zip -r ${{ matrix.job.goos}}-${{ matrix.job.platform }}.${{matrix.job.file_ext}} ./release/*
+            cd release/
+            zip -r ../${{ matrix.job.goos}}-${{ matrix.job.platform }}-${{ env.VERSION }}.${{matrix.job.file_ext}} ./* && cd ..
           else
             if [ "${{ matrix.job.platform }}" = "arm64" ]; then
                 wget https://musl.cc/aarch64-linux-musl-cross.tgz
@@ -82,7 +84,8 @@ jobs:
               sudo apt-get install musl musl-dev musl-tools -y
               GOOS=${{ matrix.job.goos }} GOARCH=${{ matrix.job.platform }} CC=musl-gcc CGO_LDFLAGS="-static" CGO_ENABLED=1 go build -ldflags "-s -w" -o ./release/rustdesk-api-server ./cmd/apimain.go
             fi
-            tar -czf ${{ matrix.job.goos}}-${{ matrix.job.platform }}.${{matrix.job.file_ext}} ./release/*
+            cd release/
+            tar -czf ../${{ matrix.job.goos}}-${{ matrix.job.platform }}-${{ env.VERSION }}.${{matrix.job.file_ext}} ./* && cd ..
           fi
 
       - name: Upload artifact
@@ -90,13 +93,13 @@ jobs:
         with:
           name: rustdesk-api-${{ matrix.job.goos }}-${{ matrix.job.platform }}
           path: |
-            ${{ matrix.job.goos}}-${{ matrix.job.platform }}.${{matrix.job.file_ext}}
+            ${{ matrix.job.goos}}-${{ matrix.job.platform }}-${{ env.VERSION }}.${{matrix.job.file_ext}}
             
       - name: Upload to GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            ${{ matrix.job.goos}}-${{ matrix.job.platform }}.${{matrix.job.file_ext}}
+            ${{ matrix.job.goos}}-${{ matrix.job.platform }}-${{ env.VERSION }}.${{matrix.job.file_ext}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
