--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
           swag init -g cmd/apimain.go --output docs/api --instanceName api --exclude http/controller/admin
           swag init -g cmd/apimain.go --output docs/admin --instanceName admin --exclude http/controller/api
 
-      - name: Build for ${{ matrix.job.goos }}-${{ env.VERSION }}-${{ matrix.job.platform }}
+      - name: Build for rustdesk-api-server-${{ matrix.job.goos }}-${{ env.VERSION }}-${{ matrix.job.platform }}
         run: |
           mkdir release -p
           cp -ar resources release/
@@ -68,7 +68,7 @@ jobs:
             sudo apt-get install gcc-mingw-w64-x86-64 zip -y
             GOOS=${{ matrix.job.goos }} GOARCH=${{ matrix.job.platform }} CC=x86_64-w64-mingw32-gcc CGO_LDFLAGS="-static" CGO_ENABLED=1 go build -ldflags "-s -w" -o ./release/rustdesk-api-server.exe ./cmd/apimain.go
             cd release/
-            zip -r ../${{ matrix.job.goos}}-${{ env.VERSION }}_${{ matrix.job.platform }}.${{matrix.job.file_ext}} ./* && cd ..
+            zip -r ../rustdesk-api-server-${{ matrix.job.goos}}-${{ env.VERSION }}_${{ matrix.job.platform }}.${{matrix.job.file_ext}} ./* && cd ..
           else
             if [ "${{ matrix.job.platform }}" = "arm64" ]; then
                 wget https://musl.cc/aarch64-linux-musl-cross.tgz
@@ -85,7 +85,7 @@ jobs:
               GOOS=${{ matrix.job.goos }} GOARCH=${{ matrix.job.platform }} CC=musl-gcc CGO_LDFLAGS="-static" CGO_ENABLED=1 go build -ldflags "-s -w" -o ./release/rustdesk-api-server ./cmd/apimain.go
             fi
             cd release/
-            tar -czf ../${{ matrix.job.goos}}-${{ env.VERSION }}_${{ matrix.job.platform }}.${{matrix.job.file_ext}} ./* && cd ..
+            tar -czf ../rustdesk-api-server-${{ matrix.job.goos}}-${{ env.VERSION }}_${{ matrix.job.platform }}.${{matrix.job.file_ext}} ./* && cd ..
           fi
 
       - name: Upload artifact
@@ -93,7 +93,7 @@ jobs:
         with:
           name: rustdesk-api-${{ matrix.job.goos }}-${{ env.VERSION }}-${{ matrix.job.platform }}
           path: |
-            ${{ matrix.job.goos}}-${{ env.VERSION }}_${{ matrix.job.platform }}.${{matrix.job.file_ext}}
+            rustdesk-api-server-${{ matrix.job.goos}}-${{ env.VERSION }}_${{ matrix.job.platform }}.${{matrix.job.file_ext}}
             
       - name: Upload release
         if: github.event_name == 'release'
@@ -101,6 +101,6 @@ jobs:
         with:
             repo_token: ${{ secrets.GITHUB_TOKEN }}
             file: |
-              ${{ matrix.job.goos}}-${{ env.VERSION }}_${{ matrix.job.platform }}.${{matrix.job.file_ext}}
+              rustdesk-api-server-${{ matrix.job.goos}}-${{ env.VERSION }}_${{ matrix.job.platform }}.${{matrix.job.file_ext}}
             tag: ${{ github.ref }}
             file_glob: true
