--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,83 +1,218 @@
+# 语言设置
 lang: "zh-CN"
-app:
-  web-client: 1  # 1:启用 0:禁用
-  register: false #是否开启注册
-  register-status: 1 # 注册用户默认状态 1:启用 2:禁用
-  captcha-threshold: 3 #   <0:disabled, 0 always, >0:enabled
-  ban-threshold: 0 # 0:disabled, >0:enabled
-  show-swagger: 0 # 1:启用 0:禁用
-  token-expire: 168h
-  web-sso: true #web auth sso
-  disable-pwd-login: false #禁用密码登录
 
+# 应用配置
+app:
+  # 是否启用Web客户端 (1=启用, 0=禁用)
+  web-client: 1
+
+  # 是否开启注册功能
+  register: false
+
+  # 注册用户默认状态 (1=启用, 2=禁用)
+  register-status: 1
+
+  # 验证码阈值 (<0=禁用验证码, 0=始终需要验证码, >0=登录失败次数达到此值后触发验证码)
+  captcha-threshold: 3
+
+  # 账户封禁阈值 (0=禁用封禁功能, >0=登录失败次数达到此值后封禁账户)
+  ban-threshold: 0
+
+  # 是否启用Swagger API文档 (1=启用, 0=禁用)
+  show-swagger: 0
+
+  # 用户认证Token有效期 (168小时=7天)
+  token-expire: 168h
+
+  # 是否启用Web单点登录（SSO）功能
+  web-sso: true
+
+  # 是否禁用密码登录 (true=禁用密码登录, 只能通过其他方式如LDAP登录)
+  disable-pwd-login: false
+
+# 管理后台配置
 admin:
+  # 管理后台标题
   title: "RustDesk API Admin"
-  hello-file: "./conf/admin/hello.html"  #优先使用file
+
+  # 优先加载的欢迎页面HTML文件路径
+  hello-file: "./conf/admin/hello.html" #优先使用file
+
+  # 备用欢迎文本 (如果hello-file指定的文件不存在则使用此文本)
   hello: ""
-  # ID Server and Relay Server ports https://github.com/lejianwen/rustdesk-api/issues/257
-  id-server-port: 21116  # ID Server port (for server cmd)
-  relay-server-port: 21117 # ID Server port (for server cmd)
+
+  # ID服务器端口 (用于设备发现和连接)
+  id-server-port: 21116
+
+  # 中继服务器端口 (用于数据传输)
+  relay-server-port: 21117
+
+# Web框架(Gin)配置
 gin:
+  # API服务监听地址和端口 (0.0.0.0表示监听所有网络接口)
   api-addr: "0.0.0.0:21114"
+
+  # 运行模式 (release=生产模式, debug=调试模式, test=测试模式)
   mode: "release" #release,debug,test
-  resources-path: 'resources'  #对外静态文件目录
+
+  # 静态资源目录 (存放CSS/JS/图片等前端资源文件)
+  resources-path: "resources" #对外静态文件目录
+
+  # 信任的代理服务器IP列表 (用于获取真实客户端IP，多个用逗号分隔)
   trust-proxy: ""
+
+# 数据库通用配置
 gorm:
+  # 数据库类型 (支持sqlite/mysql/postgresql)
   type: "sqlite"
+
+  # 数据库连接池最大空闲连接数
   max-idle-conns: 10
+
+  # 数据库连接池最大打开连接数
   max-open-conns: 100
+
+# MySQL数据库配置
 mysql:
+  # MySQL数据库用户名
   username: ""
+
+  # MySQL数据库密码
   password: ""
+
+  # MySQL数据库地址 (格式: IP:端口)
   addr: ""
+
+  # MySQL数据库名称
   dbname: ""
 
+# PostgreSQL数据库配置
 postgresql:
+  # PostgreSQL数据库主机地址
   host: "127.0.0.1"
+
+  # PostgreSQL数据库端口
   port: "5432"
+
+  # PostgreSQL数据库用户名
   user: ""
+
+  # PostgreSQL数据库密码
   password: ""
+
+  # PostgreSQL数据库名称
   dbname: "postgres"
+
+  # SSL连接模式 (disable=禁用, require=需要, verify-ca=验证CA, verify-full=完全验证)
   sslmode: "disable" # disable, require, verify-ca, verify-full
+
+  # 数据库时区设置
   time-zone: "Asia/Shanghai" # Time zone for PostgreSQL connection
 
+# RustDesk核心服务配置
 rustdesk:
+  # ID服务器地址 (用于设备发现和连接)
   id-server: "192.168.1.66:21116"
+
+  # 中继服务器地址 (用于数据传输)
   relay-server: "192.168.1.66:21117"
+
+  # API服务器地址 (用于Web客户端访问)
   api-server: "http://127.0.0.1:21114"
+
+  # 加密密钥 (优先使用此字段的密钥)
   key: ""
+
+  # 加密密钥文件路径 (如果key字段为空则使用此文件)
   key-file: "/data/id_ed25519.pub"
+
+  # 是否启用个人模式 (1=启用个人模式)
   personal: 1
+
+  # Web客户端特殊在线查询功能 (0=禁用)
   webclient-magic-queryonline: 0
-  ws-host: ""  #eg: wss://192.168.1.3:4443
+
+  # WebSocket服务地址 (例如: wss://your-domain.com)
+  ws-host: ""
+
+# 日志系统配置
 logger:
+  # 日志文件存储路径
   path: "./runtime/log.txt"
+
+  # 日志记录级别 (trace=跟踪, debug=调试, info=信息, warn=警告, error=错误, fatal=严重错误)
   level: "info" #trace,debug,info,warn,error,fatal
+
+  # 是否在日志中记录调用者信息
   report-caller: true
+
+# 网络代理配置
 proxy:
+  # 是否启用网络代理
   enable: false
+
+  # 代理服务器地址
   host: "http://127.0.0.1:1080"
+
+# JWT认证配置
 jwt:
+  # JWT签名密钥 (用于生成和验证Token)
   key: ""
+
+  # JWT有效期 (168小时=7天)
   expire-duration: 168h
+
+# LDAP目录服务配置
 ldap:
+  # 是否启用LDAP集成
   enable: false
+
+  # LDAP服务器地址
   url: "ldap://ldap.example.com:389"
+
+  # TLS CA证书文件路径 (用于安全连接)
   tls-ca-file: ""
+
+  # 是否验证TLS证书
   tls-verify: false
+
+  # LDAP基础域名
   base-dn: "dc=example,dc=com"
+
+  # LDAP管理员绑定DN
   bind-dn: "cn=admin,dc=example,dc=com"
+
+  # LDAP管理员密码
   bind-password: "password"
 
+  # LDAP用户属性映射配置
   user:
+    # 用户搜索基础路径
     base-dn: "ou=users,dc=example,dc=com"
-    enable-attr: ""       #The attribute name of the user for enabling, in AD it is "userAccountControl", empty means no enable attribute, all users are enabled
-    enable-attr-value: "" # The value of the enable attribute when the user is enabled. If you are using AD, just set random value, it will be ignored.
-    filter: "(cn=*)"
-    username: "uid"       # The attribute name of the user for usernamem if you are using AD, it should be "sAMAccountName"
-    email: "mail"
-    first-name: "givenName"
-    last-name: "sn"
-    sync: false         # If true, the user will be synchronized to the database when the user logs in. If false, the user will be synchronized to the database when the user be created.
-    admin-group: "cn=admin,dc=example,dc=com" # The group name of the admin group, if the user is in this group, the user will be an admin.
 
+    # 用户启用状态属性名 (在AD中为"userAccountControl")
+    enable-attr: "" #The attribute name of the user for enabling, in AD it is "userAccountControl", empty means no enable attribute, all users are enabled
+
+    # 启用状态的有效值 (在AD中可忽略)
+    enable-attr-value: "" # The value of the enable attribute when the user is enabled. If you are using AD, just set random value, it will be ignored.
+
+    # 用户搜索过滤器
+    filter: "(cn=*)"
+
+    # 用户名字段映射 (在AD中应为"sAMAccountName")
+    username: "uid" # The attribute name of the user for usernamem if you are using AD, it should be "sAMAccountName"
+
+    # 邮箱字段映射
+    email: "mail"
+
+    # 名字字段映射
+    first-name: "givenName"
+
+    # 姓氏字段映射
+    last-name: "sn"
+
+    # 用户同步策略 (true=登录时同步, false=创建时同步)
+    sync: false # If true, the user will be synchronized to the database when the user logs in. If false, the user will be synchronized to the database when the user be created.
+
+    # 管理员组DN (属于此组的用户将被设为管理员)
+    admin-group: "cn=admin,dc=example,dc=com" # The group name of the admin group, if the user is in this group, the user will be an admin.
